# ready-paint

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
examples/: base.rs  custom_graphics.rs  queue_ready_paint_pass.rs  refs_muts.rs
examples/nice_view/: mod.rs  object.rs  paint.rs  run.rs  world.rs
src/: gfx.rs  lib.rs  multi.rs  scene.rs  time.rs
src/gfx/: mod.rs
