[package]
name = "ready-paint"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/weykon/ready-paint.git"
keywords = ["wgpu", "winit", "graphics"]
authors = ["weykon <weykon@qq.com>"]
description = "A simple ready-paint schema using wgpu and winit."
readme = "README.md"
categories = ["graphics", "game-development", "rendering"]
license = "MIT"
exclude = ["target", "assets"]

[dependencies]
wgpu = ">=23, <25"

[[example]]
name = "base"
path = "examples/base.rs"
[[example]]
name = "queue_ready_paint_pass"
path = "examples/queue_ready_paint_pass.rs"
[[example]]
name = "nice_view"
path = "examples/nice_view/mod.rs"
[[example]]
name = "refs_muts"
path = "examples/refs_muts.rs"

[dev-dependencies]
spin_sleep = "1.3.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
pollster = "0.4.0"
glam = "0.29.2"
winit = "~0.30.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3.77", features = ["Window", "Performance"] }
